--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-typed": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
@@ -41,5 +41,9 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
     "tailwindcss": "^3.4.0"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "tailwind.config.js",
+  "author": "",
+  "license": "ISC"
 }
